# weakspot-english-coach

./: .gitignore  LICENSE  LOCAL_TESTING.md  README.md  development.md  package.json  pnpm-lock.yaml  vercel.json
apps/api/: .env.example  DEPLOY.md  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml
apps/api/app/: config.py  main.py
apps/api/app/api/: deps.py
apps/api/app/core/: mastery.py  pagination.py  taxonomy.py  text_hash.py
apps/api/app/db/: keys.py  repositories.py  serialization.py
apps/api/app/models/: chat.py  chat_import.py  coach.py  common.py  diagnostic.py  input_learning.py  learner.py  learning.py  memory.py  notes.py  plan.py  practice.py
apps/api/app/services/: ai_client.py  chat_import_service.py  chat_service.py  coach_service.py  decision_service.py  diagnose_service.py  embedding_client.py  fake_ai.py  input_learning_service.py  learning_service.py  memory_service.py  memory_write_service.py  model_catalog.py  model_routing.py  notebook_service.py  openai_mission_service.py  output_language.py  plan_service.py  practice_service.py  profile_service.py  realtime_prompts.py  realtime_sideband.py  (+4 more)
apps/api/deploy/: .env.production.example  enable_openai_build_week.sh  nginx.conf.example  start_backend.sh
apps/api/scripts/: coach_contract_test.py  create_table.py  dedup_test.py  dev_server.py  diagnosis_claim_test.py  input_output_test.py  integration_test.py  learning_loop_test.py  memory_agent_test.py  memory_benchmark.py  plan_lifecycle_test.py  set_access_role.py  smoke_test.py  stealth_input_test.py
(+237 files in other folders)
