[project]
name = "weakspot-english-coach-backend"
version = "0.1.0"
description = "WeakSpot English Coach — FastAPI backend (AI diagnosis, DynamoDB, plans, practice)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "openai>=1.40",
    "boto3>=1.34",
    "httpx>=0.28.1",
    "pyjwt>=2.13.0",
]

# This is an application, not a library — uv manages the environment but does
# not build/install the project itself (app code is run via uvicorn).
[tool.uv]
package = false

[dependency-groups]
dev = [
    "moto>=5.2.2",
]
